<resources>
    <string name="app_name">SINOW</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tv_oopps">Ooppss!</string>
    <string name="tv_user_must_login_first">Maaf, Anda harus login terlebih dahulu!</string>
    <string name="tv_login">Masuk</string>
    <string name="text_category">Kategori</string>
    <string name="text_see_all">Lihat Semua</string>
    <string name="text_popular_course">Kursus Populer</string>
    <string name="text_search_best_course">Cari Kursus terbaik...</string>
    <string name="text_notification">Notifikasi</string>
    <string name="format_course_by">by %s</string>
    <string name="format_course_module">%d Modul</string>
    <string name="format_btn_buy">Beli %s</string>
    <string name="format_course_duration">%d Menit</string>
    <string name="text_class_topic">Topik Kelas</string>
    <string name="text_filter">Filter</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="tab_all">all</string>
    <string name="tab_premium">premium</string>
    <string name="tab_free">gratis</string>
    <string name="text_login">Masuk</string>
    <string name="text_email_or_phone_number">Email</string>
    <string name="text_password">Password</string>
    <string name="text_forgot_password">Lupa Kata Sandi</string>
    <string name="text_enter_password">Masukkan Password</string>
    <string name="text_dont_have_an_acc_create">Belum punya akun? Daftar di sini</string>
    <string name="text_register_here">Daftar di sini</string>
    <string name="text_login_without_account">Masuk Tanpa Akun</string>
    <string name="text_hint_email">Contoh: sinow@gmail.com</string>
    <string name="text_register">Daftar</string>
    <string name="text_name">Nama</string>
    <string name="text_full_name">Nama Lengkap</string>
    <string name="text_email">Email</string>
    <string name="text_phone_number">Nomor Telepon</string>
    <string name="text_hint_phone_numbeer">+62</string>
    <string name="text_create_password">Buat Password</string>
    <string name="text_hint_name_empty">Nama tidak boleh kosong</string>
    <string name="text_hint_email_empty">Email tidak boleh kosong</string>
    <string name="text_hint_email_format_invalid">Format email anda salah</string>
    <string name="text_hint_password_empty">Password tidak boleh kosong</string>
    <string name="text_hint_password_length">Password minimal 8 karakter</string>
    <string name="text_hint_phonenumber_length">Nomor telepon minimal 10 karakter</string>
    <string name="text_course_not_found">Course tidak ditemukan</string>
    <string name="text_clickable_to_register">Daftar di sini</string>
    <string name="text_clickable_to_login">Masuk di sini</string>
    <string name="text_have_an_acc_login">Sudah punya akun? Masuk di sini</string>
    <string name="text_delete_notification_confirmation">Apakah kamu yakin akan menghapus pemberitahuan ini ?</string>
    <string name="text_yes">Ya</string>
    <string name="text_no">Tidak</string>
    <string name="format_course_progress">%d%%</string>
    <string name="format_course_level">%s Level</string>
    <string name="text_error_email_empty">Masukkan email!</string>
    <string name="text_error_email_invalid">Format email anda salah</string>
    <string name="text_error_password_empty">Masukkan password!</string>
    <string name="text_error_password_less_than_8_char">Password minimal 8 karakter!</string>
    <string name="text_email_not_registered">Email tidak terdaftar!</string>
    <string name="text_error_phone_cannot_empty">Nomor telepon tidak boleh kosong!</string>
    <string name="text_hi_user">Hai, %s</string>
    <string name="text_sizian">Sizian</string>
    <string name="text_study_materials">Materi Belajar</string>
    <string name="text_about_class">Tentang Kelas</string>
    <string name="text_benefit_follow_this_class">Keuntungan mengikuti kelas ini :</string>
    <string name="text_country">Negara</string>
    <string name="text_city">Kota</string>
    <string name="text_enter_your_name">Masukkan Nama Anda</string>
    <string name="text_enter_your_email">Masukkan Email Anda</string>
    <string name="text_enter_your_phone">Masukkan Nomor Telepon Anda</string>
    <string name="text_enter_your_country">Masukkan Negara Tempat Tinggal</string>
    <string name="text_enter_your_city">Masukkan Kota Tempat Tinggal</string>
    <string name="text_save_my_profile">Simpan Profile Saya</string>
    <string name="text_account">Akun</string>
    <string name="text_my_profile">Profil Saya</string>
    <string name="text_change_password">Ubah Password</string>
    <string name="text_payment_history">Riwayat Pembayaran</string>
    <string name="text_logout">Keluar</string>
    <string name="text_version">Version 1.1.0</string>
    <string name="text_old_password">Password Lama</string>
    <string name="text_new_password">Password Baru</string>
    <string name="text_repeat_new_password">Ulangi Password Lama</string>
    <string name="text_hint_old_password">Masukkan Password Lama Anda</string>
    <string name="text_hint_new_password">Masukkan Password Baru Anda</string>
    <string name="text_hint_repeat_new_password">Ulangi Password Baru Anda</string>
    <string name="text_password_successfully_changed">Password Berhasil di Ubah</string>
    <string name="tv_discount_course">Diskon Kursus %d%%</string>
    <string name="discounted_price">- %s</string>
    <string name="waiting_for_payment">Menunggu Pembayaran</string>
    <string name="pay_now">Bayar Sekarang</string>
    <string name="finish">Selesai</string>
    <string name="open_course">Buka Kelas</string>
    <string name="failed">Gagal</string>
    <string name="credit_card">Credit Card</string>
    <string name="gopay">GoPay</string>
    <string name="qris">QRIS</string>
    <string name="shopeepay">ShopeePay</string>
    <string name="bank_transfer">Bank Transfer</string>
    <string name="e_channel">E-Channel</string>
    <string name="pay_at_store">Bayar di Gerai</string>
    <string name="status_success">Dibayar</string>
    <string name="status_waiting_payment">Menunggu Pembayaran</string>
    <string name="status_failed">Gagal</string>
    <string name="payment_details">Rincian Pembayaran</string>
    <string name="total_price">Total Harga</string>
    <string name="payment_information">Informasi Pembayaran</string>
    <string name="no_order">No. Order</string>
    <string name="payment_method">Metode Pembayaran</string>
    <string name="status_order">Status</string>
    <string name="order_time">Waktu Pemesanan</string>
    <string name="payment_time">Waktu Pembayaran</string>
    <string name="pay_before">Bayar Sebelum</string>
    <string name="format_tax">+ Pajak %1$d%%</string>
    <string name="text_login_to_continue">Masuk sekarang untuk melanjutkan!</string>
    <string name="text_create_your_account_now">Buat akunmu sekarang juga!</string>
    <string name="text_enter_otp">Masukkan OTP</string>
    <string name="text_verification_your_account">Verifikasi akun anda sekarang!</string>
    <string name="text_type_six_code_otp">Ketik 6 digit kode yang dikirimkan ke</string>
    <string name="text_repeat_send_otp_code">Kirim Ulang OTP dalam 60 detik</string>
    <string name="text_ask_new_otp_code">Minta kode baru via Email</string>
    <string name="text_send">Kirim</string>
    <string name="text_repeat_send">Kirim Ulang</string>
    <string name="text_home">Beranda</string>
    <string name="text_registration_success">Registrasi Berhasil !</string>
    <string name="text_repeat_send_otp_in">"Kirim Ulang OTP dalam "</string>
    <string name="second">%1$d detik</string>
    <string name="text_email_not_valid">Email tidak valid</string>
    <string name="text_otp_code_wrong">Kode OTP Salah</string>
    <string name="text_link_reset_password_sended">Tautan reset password berhasil dikirim ke email</string>
    <string name="text_submit">Submit</string>
    <string name="text_one_more_step_to">Selangkah lagi menuju</string>
    <string name="text_premium_class">Kelas Premium</string>
    <string name="text_buy_now">Beli Sekarang</string>
    <string name="text_follow_class">Ikuti Kelas</string>
    <string name="text_buy_class">Beli Kelas</string>
    <string name="text_onboarding">Onboarding...</string>
    <string name="text_preparation_title">Persiapkan dirimu untuk melaju menuju dunia yang tertuju!</string>
    <string name="text_preparation_description">Mempunyai akun Figma atau install Adobe XD, Menggunakan Internet minimal kecepatan 2Mbps, Belajar di tempat yang nyaman</string>
    <string name="text_cancel">Batalkan</string>
    <string name="text_cancel_payment_confirmation">Apakah Anda yakin untuk membatalkan pembayaran ini?</string>
    <string name="text_history_payment">History Pembayaran</string>
    <string name="text_detail_payment">Detail Pembayaran</string>
    <string name="tv_you_havent_taken_course_yet">Kamu belum mengikuti course</string>
    <string name="tv_you_dont_have_any_transaction">Anda belum memiliki transaksi apapun</string>
    <string name="text_settings">Pengaturan</string>
    <string name="tv_dark_mode">Model Gelap</string>
    <string name="text_other_class">Kelas Lainnya</string>
    <string name="tv_already_have_an_account_login_here">Sudah punya akun? Masuk disini</string>
    <string name="text_highlight_login_here">Masuk disini</string>
    <string name="tv_lets_find_your_course">Mari temukan Kursusmu!</string>
    <string name="tv_menu_home">Beranda</string>
    <string name="tv_menu_class">Kelas</string>
    <string name="tv_menu_course">Kursus</string>
    <string name="tv_btn_all">All</string>
    <string name="tv_btn_class_premium">Kelas Premium</string>
    <string name="tv_btn_class_free">Kelas Gratis</string>
    <string name="tv_current_class">Kelas Berjalan</string>
    <string name="tv_btn_in_progress">In Progress</string>
    <string name="tv_btn_finish">Selesai</string>
    <string name="tv_sort_by">Sort by</string>
    <string name="rb_sortby_newest">Paling Baru</string>
    <string name="rb_sortby_most_popular">Paling Populer</string>
    <string name="rb_sortby_promo">Promo</string>
    <string name="tv_category">Kategori</string>
    <string name="tv_difficulty_level">Level Kesulitan</string>
    <string name="cb_beginner_level">Beginner Level</string>
    <string name="cb_intermediate_level">Intermediate Level</string>
    <string name="cb_advanced_level">Advanced Level</string>
    <string name="tv_btn_apply_filter">Terapkan Filter</string>
    <string name="tv_reset_filter">Hapus Filter</string>
    <string name="tv_tab_detail_about">Tentang</string>
    <string name="tv_tab_detail_material_class">Materi Kelas</string>
    <string name="tv_are_you_sure_want_to_logout">Apakah kamu yakin ingin keluar akun ?</string>
    <string name="tv_yes">Ya</string>
    <string name="tv_no">Tidak</string>
    <string name="tv_toast_success_update_data_user">Berhasil mengupdate data user</string>
    <string name="text_congratulation">Selamat !</string>
    <string name="text_payment_transaction_success">Transaksi pembayaran kelas premium berhasil !</string>
    <string name="text_receipt_sended_to_email">E-receipt telah dikirimkan ke email.</string>
    <string name="text_start_learning">Mulai Belajar</string>
    <string name="text_back_to_home">Kembali ke Beranda</string>
</resources>