<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.bottom_dialog.BuyPremiumCourseDialogFragment">

    <ImageView
        android:id="@+id/iv_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:src="@drawable/ic_close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_one_more_step"
        style="@style/TextAppearance.Material3.TitleLarge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="32dp"
        android:text="@string/text_one_more_step_to"
        android:textAlignment="center"
        android:textColor="@color/app_color_secondary"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/iv_close" />

    <TextView
        android:id="@+id/tv_premium_class"
        style="@style/TextAppearance.Material3.TitleLarge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="8dp"
        android:text="@string/text_premium_class"
        android:textAlignment="center"
        android:textColor="@color/app_color_primary"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/tv_one_more_step" />

    <include
        android:id="@+id/course_card"
        layout="@layout/item_list_course"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="24dp"
        app:layout_constraintBottom_toTopOf="@id/btn_buy_now"
        app:layout_constraintTop_toBottomOf="@id/tv_premium_class" />

    <Button
        android:id="@+id/btn_buy_now"
        style="@style/Widget.Material3.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:backgroundTint="@color/app_color_primary"
        android:text="@string/text_buy_now"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent" />

    <include
        android:id="@+id/layout_state"
        layout="@layout/common_layout_content_state"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>